--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ecr-test-repo
-          IMAGE_TAG: latest ##${{ github.sha }}
+          IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -72,24 +72,3 @@ jobs:
     steps:
       - name: Run Python script from container
         run: python3 /src/hello_world.py
-
-    # steps:
-    #   # - name: Github Checkout
-    #   #   uses: actions/checkout@v2
-    #   - name: Configure AWS credentials
-    #     uses: aws-actions/configure-aws-credentials@v1
-    #     with:
-    #       # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #       # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #       aws-region: ap-south-1
-
-    #   - name: Login to Amazon ECR
-    #     id: login-ecr
-    #     uses: aws-actions/amazon-ecr-login@v1
-      
-    #   - name: Run ECR image
-    #     env:
-    #       ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-    #       ECR_REPOSITORY: ecr-test-repo
-    #       IMAGE_TAG: latest ##${{ github.sha }}
-    #     run: docker run --rm $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
